--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,25 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.1.0
 Babel==2.9.1
+black==22.10.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+flake8==6.0.0
 frozenlist==1.3.3
 idna==3.4
+isort==5.10.1
 magic-filter==1.0.9
+mccabe==0.7.0
 multidict==6.0.2
+mypy-extensions==0.4.3
+pathspec==0.10.2
+platformdirs==2.5.4
+pycodestyle==2.10.0
+pyflakes==3.0.1
+python-dotenv==0.21.0
 pytz==2022.6
+tomli==2.0.1
+typing_extensions==4.4.0
 yarl==1.8.1
